--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "cordova-plugin-splashscreen",
     "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [],
+  "dependencies": {
+    "ionic-datetime-picker": "^1.1.1",
+    "ionic-timepicker": "^0.6.0"
+  }
 }
